--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,9 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+code{
+    background-color: #888;
+    color: #000;
+    font-family: monospace;
+}
