--- a/css/style.css
+++ b/css/style.css
@@ -48,5 +48,10 @@ code{
     font-family: monospace;
     padding: .1rem .3rem .2rem;
     border-radius: .2rem;
+    white-space: nowrap;
+}
+
+pre code {
+    white-space: pre;
     display: block;
 }
