add container css

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
+.container {
+    max-width:60rem;
+}
 
 ul.posts { 
     margin: 20px auto 40px; 
