--- a/css/style.css
+++ b/css/style.css
@@ -2,37 +2,52 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
 a {
     text-decoration: none;
     color: #999;
 }
+
 a:hover {
     text-decoration: underline;
 }
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    color: red;
 }
+
+h2 {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+
+h2.notbold{
+    font-weight:normal
+}​
+
 p {
     font-size: 1em;
     line-height: 1.4em;
     color: #333;
 }
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
+
 .container {
     max-width:50rem;
 }
