--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+<h1><img src="/images/selogo.svg"> {{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
-<p>{{ page.date | date_to_string }}</p>
 
 <div class="page">
   {{ content }}
