--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,8 @@
 			
 			</div><!-- /.container -->
 			<footer>
-			<hr/>
 			<ul>
-				<li><a href="https://github.com/b-t-k">github.com/b-tk</a></li>
+				<li><a href="https://github.com/b-t-k/b-t-k.github.io">github.com/b-tk/b-t-k.github.io</a></li>
 			</ul>
 			</footer>
 		</body>
