--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ h2.notbold{
 
 footer {
     border-top: 1px solid #d5d5d5;
+    border-bottom-color: red;
+    border-bottom: 2px;
     font-size: .8em;
 }
 
@@ -54,7 +56,7 @@ ul.posts {
     font-size: 1.5em;
 }
 
-ul.pages li {
+ul.page li {
     list-style: none;
     color:red;
 }
