--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 			</div><!-- /.container -->
 			<footer>
 			<ul>
-				<li><a href="https://github.com/b-t-k/b-t-k.github.io">github.com/b-tk/b-t-k.github.io</a></li>
+				<li><a href="https://github.com/b-t-k/b-t-k.github.io">github.com/b-t-k/b-t-k.github.io</a></li>
 			</ul>
 			</footer>
 		</body>
