--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,12 @@ footer {
     max-width:50rem;
 }
 
-ul.posts { 
+ul.toc { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
 
-ul.page li {
+ul.toc li {
     list-style: none;
     color:red;
 }
