--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,15 +10,17 @@
 				<nav>
 					<ul>
 						<li><a href="/">Home</a></li>
-						<li><a href="https://standardebooks.org/">Standard ebooks</a></li>
+						<li><a href="https://standardebooks.org/">Standard ebooks Home</a></li><li><a href="https://github.com/b-t-k/b-t-k.github.io">git repo for this site</a></li>
 					</ul>
 				</nav>
 			
 				{{ content }}
 			
 				<footer>
+				<h5>My other sites</h5>
 				<ul>
-					<li><a href="https://github.com/b-t-k/b-t-k.github.io">github.com/b-t-k/b-t-k.github.io</a></li>
+					<li><a href="https://github.com/b-t-k/">github.com/b-t-k</a></li>
+					<li><a href="https://astart.ca">astart.ca</a></li>
 				</ul>
 				</footer>
 			</div>
