--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@
 				</nav>
 			
 				{{ content }}
+				<hr/>
+				*Modified {{ site.time | date: '%B %d, %Y' }}*
 			
 				<footer>
 				<h5>My other sites</h5>
