--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
 				</nav>
 			
 				{{ content }}
-				<hr/>
-				*Modified {{ site.time | date: '%B %d, %Y' }}*
+				<hr/ style="width: 25%;">
+				<em class="small">Modified {{ site.time | date: '%B %d, %Y' }}</em>
 			
 				<footer>
 				<h5>My other sites</h5>
