--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 			
 				{{ content }}
 				<hr/ style="width: 25%;">
-				<em class="small">Modified {{ site.time | date: '%B %d, %Y' }}</em>
+				<em class="small">Modified {{ site.time | date: '%B %d, %Y — %R' }}</em>
 			
 				<footer>
 				<h5>My other sites</h5>
